# wasm-faas

./: .gitignore  dump.rdb
learn/0_prepare_wasmedge_env/: readme.md
learn/10_use_cache_api_in_wasm_int32/: readme.md
learn/11_use_go_cache/: readme.md
learn/13_wasm_go_cache_bindwidth/: readme.md
learn/3_run_wasm_lib_in_go/: readme.md
learn/6_simple_host_function/: readme.md
learn/8_wasmedge_bindgen/: readme.md
learn/9_wasmedge_bindwidth/: readme.md
learn_wasmedge/12_use_pointer_host_func/: readme.md
learn_wasmedge/13_wasm_go_cache_bindwidth/: readme.md
learn_wasmedge/14_rust_wordcount/: readme.md
learn_wasmedge/17_c_host/: readme.md
learn_wasmedge/18_c_string_bindwidth/: readme.md
learn_wasmedge/19_bindgen_wasm_wordcount_orchestration/: readme.md
learn_wasmedge/1_run_a_wasm/: readme.md
learn_wasmedge/20_rust_video_processing/: readme.md
learn_wasmedge/21_go_video_processing/: readme.md
learn_wasmedge/23_faas_worker/: readme.md
learn_wasmedge/24_putlut_in_rust/: readme.md
learn_wasmedge/26_test_bindgen_list/: readme.md
learn_wasmedge/27_go_read_txt/: example.txt  go.mod  main  main.go
learn_wasmedge/2_run_hostfunc_in_go/: readme.md
learn_wasmedge/4_use_redis_in_wasm/: readme.md
learn_wasmedge/5_implement_local_cache_in_go/: readme.md
learn_wasmedge/9_wasmedge_bindwidth/: readme.md
src/cmd/faas_worker/: Cargo.toml
src/cmd/faas_worker/src/: main.rs
src/workflow/video_processing/putlut/: Cargo.toml  rust_build.sh
src/workflow/video_processing/putlut/src/: lib.rs
src/workflow/video_processing/putwatermark/: Cargo.toml
(+138 files in other folders)
