[package]
name = "faas_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis_wasi = "0.22"
anyhow = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
tokio_wasi = { version = "1", features = ["rt", "time", "macros"] }