[package]
name = "putlut"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis_wasi = "0.22"
anyhow = "1.0"
wasmedge-bindgen = "0.4.1"
wasmedge-bindgen-macro = "0.4.1"
image = "0.24.3"


[lib]
name = "putlut"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]